force-app/main/default/objects/Position__c/Position__c.object-meta.xml
<CustomObject>
    <description>Volunteer role that is specific to a volunteer program or geographic division of the program.</description>
    <label>Position</label>
    <nameField>
        <label>Position</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Positions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>