force-app/main/default/objects/Position__c/fields/Assignment_Duration_in_months__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Duration_in_months__c</fullName>
    <description>Length of volunteer assignment in months, if known.</description>
    <inlineHelpText>Enter the number of months for this volunteer assignment, if known.</inlineHelpText>
    <label>Assignment Duration (in months)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>