force-app/main/default/objects/Position__c/fields/Assignment_Limit__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Limit__c</fullName>
    <description>Maximum times a volunteer may be assigned to this position.  Leave blank if there is no limit.</description>
    <inlineHelpText>Enter the maximum times a volunteer may be assigned to this position.  Leave blank if there is no limit.</inlineHelpText>
    <label>Assignment Limit</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>