force-app/main/default/objects/Position__c/fields/BCPS__c.field-meta.xml
<CustomField>
    <fullName>BCPS__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Captures the stipend amount allocated to this position from the BCPS Grant .</description>
    <inlineHelpText>Enter the amount allocated to this position from the BCPS Grant.</inlineHelpText>
    <label>BCPS</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>