force-app/main/default/objects/Position__c/fields/Candidate_Expenses_Permitted__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Expenses_Permitted__c</fullName>
    <description>Can a candidate for this position submit expenses? (This option only available if Expense Eligible = &quot;Yes&quot;)</description>
    <inlineHelpText>Can a candidate for this position submit expenses? (This option only available if Expense Eligible = &quot;Yes&quot;)</inlineHelpText>
    <label>Candidate Expenses Permitted</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Expense_Eligible__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>