force-app/main/default/objects/Position__c/fields/City_Fund__c.field-meta.xml
<CustomField>
    <fullName>City_Fund__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Captures the stipend amount allocated to this position from the City Fund Grant .</description>
    <inlineHelpText>Enter the amount allocated to this position from the City Fund Grant.</inlineHelpText>
    <label>City Fund</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>