force-app/main/default/objects/Position__c/fields/CNCS__c.field-meta.xml
<CustomField>
    <fullName>CNCS__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Captures the stipend amount allocated to this position from the CNCS Grant.</description>
    <inlineHelpText>Enter the amount allocated to this position from the CNCS Grant.</inlineHelpText>
    <label>CNCS</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>