force-app/main/default/objects/Position__c/fields/Commitment_Hours_Goal__c.field-meta.xml
<CustomField>
    <fullName>Commitment_Hours_Goal__c</fullName>
    <description>Target number of volunteer hours to be completed for this position (if applicable).</description>
    <inlineHelpText>Target number of volunteer hours to be completed for this position (if applicable).</inlineHelpText>
    <label>Commitment Hours Goal</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>