force-app/main/default/objects/Position__c/fields/CPS__c.field-meta.xml
<CustomField>
    <fullName>CPS__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Captures the stipend amount allocated to this position from the CPS Grant .</description>
    <inlineHelpText>Enter the amount allocated to this position from the CPS Grant.</inlineHelpText>
    <label>CPS</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>