force-app/main/default/objects/Position__c/fields/DCPNI__c.field-meta.xml
<CustomField>
    <fullName>DCPNI__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Captures the stipend amount allocated to this position from the DCPNI Grant .</description>
    <inlineHelpText>Enter the amount allocated to this position from the DCPNI Grant.</inlineHelpText>
    <label>DCPNI</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>