force-app/main/default/objects/Position__c/fields/DCPS__c.field-meta.xml
<CustomField>
    <fullName>DCPS__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Captures the stipend amount allocated to this position from the DCPS Grant .</description>
    <inlineHelpText>Enter the amount allocated to this position from the DCPS Grant.</inlineHelpText>
    <label>DCPS</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>