force-app/main/default/objects/Position__c/fields/Deduction_Amount__c.field-meta.xml
<CustomField>
    <fullName>Deduction_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Captures the amount of non-taxable grant money that is allocated to a position&#39;s stipend.</description>
    <inlineHelpText>Enter the amount of non-taxable grant money allocated to this position&#39;s stipend.</inlineHelpText>
    <label>Deduction Amount</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>