force-app/main/default/objects/Position__c/fields/Deduction_Code__c.field-meta.xml
<CustomField>
    <fullName>Deduction_Code__c</fullName>
    <description>Captures the deduction code used by ADP for stipend processing.</description>
    <inlineHelpText>If this position has non-taxable grant allocations, select NS. If this position does not, leave this blank.</inlineHelpText>
    <label>Deduction Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>