force-app/main/default/objects/Position__c/fields/Deerbrook__c.field-meta.xml
<CustomField>
    <fullName>Deerbrook__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Captures the stipend amount allocated to this position from the Deerbrook Grant .</description>
    <inlineHelpText>Enter the amount allocated to this position from the Deerbrook Grant.</inlineHelpText>
    <label>Deerbrook</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>