force-app/main/default/objects/Position__c/fields/Development_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Development_Opportunities__c</fullName>
    <description>Development opportunities for this position.</description>
    <inlineHelpText>What development opportunities does this position provide?</inlineHelpText>
    <label>Development Opportunities</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>