force-app/main/default/objects/Position__c/fields/Display_Name__c.field-meta.xml
<CustomField>
    <fullName>Display_Name__c</fullName>
    <description>Position name displayed on Job Board</description>
    <label>Display Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>