force-app/main/default/objects/Position__c/fields/DOJ__c.field-meta.xml
<CustomField>
    <fullName>DOJ__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Captures the stipend amount allocated to this position from the DOJ Grant .</description>
    <inlineHelpText>Enter the amount allocated to this position from the DOJ Grant.</inlineHelpText>
    <label>DOJ</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>