force-app/main/default/objects/Position__c/fields/Enterprise_Level_Program__c.field-meta.xml
<CustomField>
    <fullName>Enterprise_Level_Program__c</fullName>
    <description>Enterprise level program name</description>
    <label>Enterprise Level Program</label>
    <length>80</length>
    <type>Text</type>
</CustomField>