force-app/main/default/objects/Position__c/fields/Event_Expense_Eligible__c.field-meta.xml
<CustomField>
    <fullName>Event_Expense_Eligible__c</fullName>
    <description>Volunteers assigned to this position can associate expenses to a volunteer event.</description>
    <inlineHelpText>Volunteers assigned to this position can associate expenses to a volunteer event.</inlineHelpText>
    <label>Event Expense Eligible</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>