force-app/main/default/objects/Position__c/fields/Exclude_From_Net_Years_Served__c.field-meta.xml
<CustomField>
    <fullName>Exclude_From_Net_Years_Served__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box to exclude this position  from net year calculation on program volunteer record.</description>
    <inlineHelpText>Check this box to exclude this position  from net year calculation on program volunteer record.</inlineHelpText>
    <label>Exclude From Net Years Served</label>
    <type>Checkbox</type>
</CustomField>