force-app/main/default/objects/Position__c/fields/Expense_Eligible__c.field-meta.xml
<CustomField>
    <fullName>Expense_Eligible__c</fullName>
    <description>Is this position eligible for submitting expense reimbursement requests?</description>
    <inlineHelpText>Is this position eligible for submitting expense reimbursement requests?</inlineHelpText>
    <label>Expense Eligible</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>