force-app/main/default/objects/Position__c/fields/FLBC__c.field-meta.xml
<CustomField>
    <fullName>FLBC__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Captures the stipend amount allocated to this position from the FLBC Grant .</description>
    <inlineHelpText>Enter the amount allocated to this position from the FLBC Grant.</inlineHelpText>
    <label>FLBC</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>