force-app/main/default/objects/Position__c/fields/Full_Stipend_Amount__c.field-meta.xml
<CustomField>
    <fullName>Full_Stipend_Amount__c</fullName>
    <description>Captures the total stipend amount paid to volunteers holding this position.</description>
    <formula>Rate_1_Amount__c -  Deduction_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is a read-only field that captures total stipend amount for this position.</inlineHelpText>
    <label>Full Stipend Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>