force-app/main/default/objects/Position__c/fields/General__c.field-meta.xml
<CustomField>
    <fullName>General__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Captures the stipend amount allocated to this position from general grants.</description>
    <inlineHelpText>Enter the amount allocated to this position from any grants not listed by name in the stipend grant allocation section.</inlineHelpText>
    <label>General</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>