force-app/main/default/objects/Position__c/fields/Geocode__c.field-meta.xml
<CustomField>
    <fullName>Geocode__c</fullName>
    <description>Geocode information used for location standardization.</description>
    <label>Geocode</label>
    <scale>6</scale>
    <type>Location</type>
</CustomField>