force-app/main/default/objects/Position__c/fields/GOSV__c.field-meta.xml
<CustomField>
    <fullName>GOSV__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Captures the position&#39;s allocation from the GOSV grant.</description>
    <inlineHelpText>Enter the amount allocated from the GOSV grant for this position.</inlineHelpText>
    <label>GOSV</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>