force-app/main/default/objects/Position__c/fields/Hierarchy_Formula__c.field-meta.xml
<CustomField>
    <fullName>Hierarchy_Formula__c</fullName>
    <formula>(Parent_Position__r.Id) + &#39;,&#39; + (Parent_Position__r.Parent_Position__r.Id) + &#39;,&#39; + (Parent_Position__r.Parent_Position__r.Parent_Position__r.Id) + &#39;,&#39; + (Parent_Position__r.Parent_Position__r.Parent_Position__r.Parent_Position__r.Id) + &#39;,&#39; + (Parent_Position__r.Parent_Position__r.Parent_Position__r.Parent_Position__r.Parent_Position__r.Id) + &#39;,&#39; + (Parent_Position__r.Parent_Position__r.Parent_Position__r.Parent_Position__r.Parent_Position__r.Parent_Position__r.Id) + &#39;,&#39; + (Parent_Position__r.Parent_Position__r.Parent_Position__r.Parent_Position__r.Parent_Position__r.Parent_Position__r.Parent_Position__r.Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hierarchy Formula</label>
    <type>Text</type>
</CustomField>