force-app/main/default/objects/Position__c/fields/Initiative__c.field-meta.xml
<CustomField>
    <fullName>Initiative__c</fullName>
    <description>Designates a specific AARP initiative being supported.</description>
    <label>Initiative</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Advocacy</fullName>
            </value>
            <value>
                <fullName>CarFit</fullName>
            </value>
            <value>
                <fullName>Communications</fullName>
            </value>
            <value>
                <fullName>Community Service</fullName>
            </value>
            <value>
                <fullName>Create the Good</fullName>
            </value>
            <value>
                <fullName>Diversity</fullName>
            </value>
            <value>
                <fullName>Driver Safety</fullName>
            </value>
            <value>
                <fullName>Elderwatch - AG</fullName>
            </value>
            <value>
                <fullName>ElderWatch - Money Gram</fullName>
            </value>
            <value>
                <fullName>Financial Security</fullName>
            </value>
            <value>
                <fullName>Health Care/LTC/Caregiving</fullName>
            </value>
            <value>
                <fullName>Housing</fullName>
            </value>
            <value>
                <fullName>Hunger</fullName>
            </value>
            <value>
                <fullName>Information Center</fullName>
            </value>
            <value>
                <fullName>Intern</fullName>
            </value>
            <value>
                <fullName>Legal Counsel for the Elderly</fullName>
            </value>
            <value>
                <fullName>Livable Communities</fullName>
            </value>
            <value>
                <fullName>National Initiatives</fullName>
            </value>
            <value>
                <fullName>Regional Leadership</fullName>
            </value>
            <value>
                <fullName>SNAP Program</fullName>
            </value>
            <value>
                <fullName>Special Project</fullName>
            </value>
            <value>
                <fullName>State Leadership</fullName>
            </value>
            <value>
                <fullName>We Need to Talk</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>