force-app/main/default/objects/Position__c/fields/Is_Supervisor__c.field-meta.xml
<CustomField>
    <fullName>Is_Supervisor__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This box is checked if this position is a supervisory role, e.g manages other volunteers.</description>
    <inlineHelpText>Check this box if this is a supervisory position, e.g. manages other volunteers.</inlineHelpText>
    <label>Supervisory Position</label>
    <type>Checkbox</type>
</CustomField>