force-app/main/default/objects/Position__c/fields/Key_Responsibilities__c.field-meta.xml
<CustomField>
    <fullName>Key_Responsibilities__c</fullName>
    <description>Key responsibilities for this position.</description>
    <inlineHelpText>What are the key responsibilities for this position?</inlineHelpText>
    <label>Key Responsibilities</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>