force-app/main/default/objects/Position__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <description>Location(s) where volunteer position will be performed.</description>
    <inlineHelpText>Name the location(s) where the volunteer position will be performed.</inlineHelpText>
    <label>Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>