force-app/main/default/objects/Position__c/fields/Non_Payroll_Taxed_Stipend_Amount__c.field-meta.xml
<CustomField>
    <fullName>Non_Payroll_Taxed_Stipend_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Non-Payroll Taxed Stipend Amount</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>