force-app/main/default/objects/Position__c/fields/Non_Payroll_Taxed_Stipend_Eligible__c.field-meta.xml
<CustomField>
    <fullName>Non_Payroll_Taxed_Stipend_Eligible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Non-Payroll Taxed Stipend Eligible</label>
    <type>Checkbox</type>
</CustomField>