force-app/main/default/objects/Position__c/fields/Non_Payroll_Taxed_Stipend_Funding_Code__c.field-meta.xml
<CustomField>
    <fullName>Non_Payroll_Taxed_Stipend_Funding_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Non-Payroll Taxed Stipend Funding Code</description>
    <inlineHelpText>Non-Payroll Taxed Stipend Funding Code</inlineHelpText>
    <label>Non-Payroll TS Funding Code</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Funding_Code__c.Program__r.Name</field>
            <operation>equals</operation>
            <value>Experience Corps</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Funding_Code__c</referenceTo>
    <relationshipLabel>Positions</relationshipLabel>
    <relationshipName>Positions</relationshipName>
    <type>Lookup</type>
</CustomField>