force-app/main/default/objects/Position__c/fields/Number_of_Active_Assignments__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Active_Assignments__c</fullName>
    <description>Number of active assignments related to this position (hidden field to be used for formula field that calculates open positions).</description>
    <inlineHelpText>Number of active assignments related to this position.</inlineHelpText>
    <label>Number of Active Assignments</label>
    <summaryFilterItems>
        <field>Volunteer_Assignment__c.Is_Active_Status__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Volunteer_Assignment__c.Position__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>