force-app/main/default/objects/Position__c/fields/OSI__c.field-meta.xml
<CustomField>
    <fullName>OSI__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Captures the stipend amount allocated to this position from the OSI Grant .</description>
    <inlineHelpText>Enter the amount allocated to this position from the OSI Grant.</inlineHelpText>
    <label>OSI</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>