force-app/main/default/objects/Position__c/fields/PA_Charter_Schools__c.field-meta.xml
<CustomField>
    <fullName>PA_Charter_Schools__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Captures the stipend amount allocated to this position from the PA Charter Schools Grant .</description>
    <inlineHelpText>Enter the amount allocated to this position from the PA Charter Schools Grant.</inlineHelpText>
    <label>PA Charter Schools</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>