force-app/main/default/objects/Position__c/fields/Pay_Frequency_Code__c.field-meta.xml
<CustomField>
    <fullName>Pay_Frequency_Code__c</fullName>
    <defaultValue>&quot;M&quot;</defaultValue>
    <description>Captures the frequency with which ADP processes stipends for volunteers.</description>
    <inlineHelpText>This is a read only field that will always display M. This denotes that this position is paid stipends on a monthly basis.</inlineHelpText>
    <label>Pay Frequency Code</label>
    <length>1</length>
    <type>Text</type>
</CustomField>