force-app/main/default/objects/Position__c/fields/Position_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Position_Contact_Email__c</fullName>
    <description>Position&#39;s point of contact email address.</description>
    <inlineHelpText>Enter this position&#39;s point of contact email address.</inlineHelpText>
    <label>Position Contact Email</label>
    <type>Email</type>
</CustomField>