force-app/main/default/objects/Position__c/fields/Position_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Position_Contact_Name__c</fullName>
    <description>Full Name of position point of contact.</description>
    <inlineHelpText>Enter the full name of this position&#39;s point of contact.</inlineHelpText>
    <label>Position Contact Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>