force-app/main/default/objects/Position__c/fields/Position_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Position_Contact_Phone__c</fullName>
    <description>Position&#39;s point of contact phone number.</description>
    <inlineHelpText>Enter this position&#39;s point of contact phone number.</inlineHelpText>
    <label>Position Contact Phone</label>
    <type>Phone</type>
</CustomField>