force-app/main/default/objects/Position__c/fields/Position_Openings__c.field-meta.xml
<CustomField>
    <fullName>Position_Openings__c</fullName>
    <description>Number of position openings for job boards/recruitment.</description>
    <inlineHelpText>Enter the number of position openings for job boards/recruitment.</inlineHelpText>
    <label>Position Openings</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>