force-app/main/default/objects/Position__c/fields/Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Postal_Code__c</fullName>
    <description>Primary postal code location where majority of this position&#39;s duties will be performed.</description>
    <inlineHelpText>The postal code location where majority of this position&#39;s duties will be performed.</inlineHelpText>
    <label>Postal Code</label>
    <length>11</length>
    <type>Text</type>
</CustomField>