force-app/main/default/objects/Position__c/fields/Profile_Type__c.field-meta.xml
<CustomField>
    <fullName>Profile_Type__c</fullName>
    <description>Profile type associated with this position.</description>
    <inlineHelpText>Select the profile type that is associated with this position.</inlineHelpText>
    <label>Profile Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Volunteer</fullName>
            </value>
            <value>
                <fullName>Volunteer Leader - Read Only</fullName>
            </value>
            <value>
                <fullName>Volunteer Leader - Edit</fullName>
            </value>
            <value>
                <fullName>Volunteer Supervisor - Read Only</fullName>
            </value>
            <value>
                <fullName>Volunteer Supervisor - Edit</fullName>
            </value>
            <value>
                <fullName>Staff</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>