force-app/main/default/objects/Position__c/fields/PSD__c.field-meta.xml
<CustomField>
    <fullName>PSD__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Captures the stipend amount allocated to this position from the PSD Grant .</description>
    <inlineHelpText>Enter the amount allocated to this position from the PSD Grant.</inlineHelpText>
    <label>PSD</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>