force-app/main/default/objects/Position__c/fields/Rate_1_Amount__c.field-meta.xml
<CustomField>
    <fullName>Rate_1_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Captures the amount of taxable grant money that is allocated to a position&#39;s stipend.</description>
    <inlineHelpText>Enter the amount of taxable grant money allocated to this position for stipends. This includes the GOSV, CNCS, and Serve DC grants as well as any grants used to match these grants.</inlineHelpText>
    <label>Rate 1 Amount</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>