force-app/main/default/objects/Position__c/fields/Regional_Opening__c.field-meta.xml
<CustomField>
    <fullName>Regional_Opening__c</fullName>
    <description>Select Statewide for this position to be posted statewide or Nationwide for national posting.</description>
    <inlineHelpText>Select Statewide for this position to be posted statewide or Nationwide for national posting.</inlineHelpText>
    <label>Regional Opening</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Statewide</fullName>
            </value>
            <value>
                <fullName>Nationwide</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>